--- a/index.html
+++ b/index.html
@@ -6,8 +6,72 @@
   <title>R.P.S</title>
 </head>
 <body>
+  <h1 style="text-align: center;">Look in the console! UI coming soon.</h1>
   <script>
-    
+
+    //why does it only return rock?
+    function computerPlay() {
+      const choices = ['rock', 'paper', 'scissors']
+
+      return choices[Math.random() * this.length]  
+    }
+
+    function playRound(playerSelection, computerSelection) {
+      playerSelection = playerSelection.toLowerCase();
+      const choices = ['rock', 'paper', 'scissors']
+
+      if (!choices.includes(playerSelection)) {
+        console.log(`You chose ${playerSelection}`);
+        console.log(`Computer chose ${computerSelection}`);
+        return 'Invalid entry';
+      }
+
+      else if (playerSelection === computerSelection) {
+        console.log(`You chose ${playerSelection}`);
+        console.log(`Computer chose ${computerSelection}`);
+        return 'It\'s a tie!';
+      }
+
+      else if (playerSelection === choices[0] && computerSelection == choices[1]) {
+        console.log(`You chose ${playerSelection}`);
+        console.log(`Computer chose ${computerSelection}`);
+        return 'You lose! Paper covers rock!'
+      }
+
+      else if (playerSelection === choices[0] && computerSelection == choices[2]) {
+        console.log(`You chose ${playerSelection}`);
+        console.log(`Computer chose ${computerSelection}`);
+        return 'You win! Rock beats scissors!'
+      }
+
+      else if (playerSelection === choices[1] && computerSelection == choices[0]) {
+        console.log(`You chose ${playerSelection}`);
+        console.log(`Computer chose ${computerSelection}`);
+        return 'You win! Paper covers rock!'
+      }
+
+      else if (playerSelection === choices[1] && computerSelection == choices[2]) {
+        console.log(`You chose ${playerSelection}`);
+        console.log(`Computer chose ${computerSelection}`);
+        return 'You lose! Scissors cut paper!'
+      }
+
+      else if (playerSelection === choices[2] && computerSelection == choices[0]) {
+        console.log(`You chose ${playerSelection}`);
+        console.log(`Computer chose ${computerSelection}`);
+        return 'You lose! Rock beats scissors!'
+      }
+
+      else if (playerSelection === choices[2] && computerSelection == choices[1]) {
+        console.log(`You chose ${playerSelection}`);
+        console.log(`Computer chose ${computerSelection}`);
+        return 'You win! Scissors cut paper!'
+      }
+    }
+
+    const playerSelection = 'rock';
+    const computerSelection = computerPlay();
+    console.log(playRound(playerSelection, computerSelection))
   </script>
 </body>
 </html>
