--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 
     //why does it only return rock?
     function computerPlay() {
-      const choices = ['rock', 'paper', 'scissors']
-
-      return choices[Math.random() * this.length]  
+      const choices = ['rock', 'paper', 'scissors'];
+      let rand = Math.floor(Math.random() * Math.floor(3));
+      return choices[rand]  
     }
 
     function playRound(playerSelection, computerSelection) {
       playerSelection = playerSelection.toLowerCase();
       const choices = ['rock', 'paper', 'scissors']
 
-      if (!choices.includes(playerSelection)) {
+      if (!choices.includes(playerSelection)) { 
         console.log(`You chose ${playerSelection}`);
         console.log(`Computer chose ${computerSelection}`);
         return 'Invalid entry';
@@ -69,7 +69,7 @@
       }
     }
 
-    const playerSelection = 'rock';
+    const playerSelection = computerPlay()
     const computerSelection = computerPlay();
     console.log(playRound(playerSelection, computerSelection))
   </script>
