--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <h1 style="text-align: center;">Look in the console! UI coming soon.</h1>
   <script>
 
-    //why does it only return rock?
-    function computerPlay() {
+  //choose and return a random value from the list of weapons
+    function chooseRandom() {
       const choices = ['rock', 'paper', 'scissors'];
       let rand = Math.floor(Math.random() * Math.floor(3));
       return choices[rand]  
@@ -18,7 +18,7 @@
 
     function playRound(playerSelection, computerSelection) {
       playerSelection = playerSelection.toLowerCase();
-      const choices = ['rock', 'paper', 'scissors']
+      const choices = ['rock', 'paper', 'scissors'];
 
       if (!choices.includes(playerSelection)) { 
         console.log(`You chose ${playerSelection}`);
@@ -69,9 +69,15 @@
       }
     }
 
-    const playerSelection = computerPlay()
-    const computerSelection = computerPlay();
+    const playerSelection = 'paper';                                  //**********change this value to play against computer!**********
+    const computerSelection = chooseRandom();
     console.log(playRound(playerSelection, computerSelection))
+
+    //play rounds until a player wins 5 times 
+    function game() {
+        
+    }
+
   </script>
 </body>
 </html>
