--- a/index.html
+++ b/index.html
@@ -4,25 +4,38 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" type="text/css">
   
   <title>R.P.S</title>
 </head>
 <body>
-  <h1>Rock Paper Scissors</h1>
-  <h3>look in the console</h3>
+  <h1>Choose a Weapon</h1>
+  
+  <div id="stats"></div>
+  
+  <div id="results"></div>
   
   <div id="buttons">
-    <button class="btn" id="rock">Rock</button>
-    <button class="btn" id="paper">Paper</button>
-    <button class="btn" id="scissors">Scissors</button>
+
+    <button class="btn" id="rock"> 
+      <span class="far fa-hand-rock"></span> 
+    </button>
+      
+    <button class="btn" id="paper">
+      <i class="far fa-hand-paper"></i>
+    </button>
+
+    <button class="btn" id="scissors">
+      <i class="far fa-hand-scissors"></i>
+    </button>
+
   </div>
 
-  <div id=results></div>
+  
 
   <!-- <i class="far fa-hand-rock"></i>
   <i class="far fa-hand-paper"></i>
-  <i class="far fa-hand-scissors"></i> -->
+   -->
 
 
   <script src="index.js"></script>  
