funtional and displays data

--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 </head>
 <body>
   <h1>Choose a Weapon</h1>
+  <button id="reset">Reset</button>
+  <div id="stats">
+    
+  </div>
   
-  <div id="stats"></div>
-  
-  <div id="results"></div>
+  <div id="results">
+    
+  </div>
   
   <div id="buttons">
 
@@ -30,13 +34,6 @@
     </button>
 
   </div>
-
-  
-
-  <!-- <i class="far fa-hand-rock"></i>
-  <i class="far fa-hand-paper"></i>
-   -->
-
 
   <script src="index.js"></script>  
 </body>
