all data displayed in browser

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <button id="reset">Reset</button> 
 
 
-  <div id="game-results"></div>
+  <!-- <div id="game-results"></div> -->
 
   <script src="index.js"></script>  
 </body>
