--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
   <div id="stats"></div>
   
   <div id="buttons">
-
     <button class="btn" id="rock"> 
       <i class="far fa-hand-rock"></i> 
     </button>
@@ -29,13 +28,11 @@
     <button class="btn" id="scissors">
       <i class="far fa-hand-scissors"></i>
     </button>
-
   </div>
 
+  <div id="results"></div>
+
   <button id="reset">Reset</button> 
-
-
-  <!-- <div id="game-results"></div> -->
 
   <script src="index.js"></script>  
 </body>
